2011-10-04  David Barr  <davidbarr@chromium.org>

        Update test expectations after http://trac.webkit.org/changeset/96449
        https://bugs.webkit.org/show_bug.cgi?id=69316

        Reviewed by Ojan Vafai.

        * platform/chromium/test_expectations.txt:

2011-10-04  Ben Wells  <benwells@chromium.org>

        Rebaseline for bug 65583 (path based border radius drawing on skia) part 7
        https://bugs.webkit.org/show_bug.cgi?id=69135

        Reviewed by James Robinson.

        * platform/chromium-linux/fast/: 26 changes.
        * platform/chromium-linux/svg/custom/no-inherited-dashed-stroke-expected.png:
        * platform/chromium-linux/svg/transforms/animated-path-inside-transformed-html-expected.png:
        * platform/chromium-linux/tables/mozilla/collapsing_borders/bug41262-3-expected.png:
        * platform/chromium-win/fast/: 27 changes.
        * platform/chromium-win/svg/custom/no-inherited-dashed-stroke-expected.png:
        * platform/chromium-win/svg/transforms/animated-path-inside-transformed-html-expected.png:
        * platform/chromium-win/tables/mozilla/collapsing_borders/bug41262-3-expected.png:
        * platform/chromium/test_expectations.txt:

2011-10-04  Scott Graham  <scottmg@chromium.org>

        occasional crash in Chromium in dispatching keyEvent
        https://bugs.webkit.org/show_bug.cgi?id=67941

        Reviewed by Tony Chang.

        * fast/events/keyevent-iframe-removed-crash-expected.txt: Added.
        * fast/events/keyevent-iframe-removed-crash.html: Added.

2011-10-04  Adam Barth  <abarth@webkit.org>

        Update XP results for the font shaping patch.

        * platform/chromium-win-xp/fast/text/international/bidi-neutral-run-expected.txt: Added.

2011-10-04  Adam Barth  <abarth@webkit.org>

        Update baselines after http://trac.webkit.org/changeset/96620.  These
        changes match the changes Dave made to other platforms.
