@@ -9,8 +9,10 @@
     <script src="../js/resources/js-test-pre.js"></script>
     <script>
 	  var box = document.getElementById('textbox');
-      if (window.internals)
+      if (window.internals) {
+        window.internals.scrollElementToRect(box, 0, 100, 300, 300);
         window.internals.scrollElementToRect(box, 0, 0, 300, 300);
+      }
 
       var rect = box.getBoundingClientRect();
       var computedLeft = Math.floor((300 - rect.width) / 2);
